# nodo-x402-Solana

./: CONTRIBUTING.md  DEPLOY_TO_GITHUB.md  Dockerfile  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  REPOSITORY_COMPLETE.md  STRUCTURE.txt  TWITTER_READY.txt  TWITTER_THREAD.md  TWITTER_THREAD_FINAL.md  TWITTER_THREAD_v2.md  VISUAL_TEMPLATES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  start.bat  start.sh
docs/: README.md  SUMMARY.md  ai-models.md  api.md  architecture.md  concept.md  examples.md  integration.md  payment-flow.md  pricing.md  quick-start.md  sdk.md  self-hosting.md  what-is-x402.md  why-solana.md
examples/: manual-payment.py  python-basic.py  typescript-basic.ts
